[tool.poetry]
name = "galsdk"
version = "0.10.0"
description = "Mod tools for the PSX game Galerians"
authors = ["descawed <github@descawed.com>"]
readme = "README.md"
repository = "https://github.com/descawed/galsdk"

[tool.poetry.dependencies]
python = "^3.12"
panda3d = "^1.10.15"
pillow = "^11.0.0"
pmw = "^2.1.1"
ffmpeg-python = "^0.2.0"
numpy = "^2.1.3"
rabbitizer = "^1.12.0"
json-five = "^1.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pre-commit = "^3.8.0"

[tool.poetry.group.build.dependencies]
cx-freeze = "^8.3.0"

[tool.cxfreeze]
executables = [
    {script = "galsdk/editor.py", base = "gui"},
    "galsdk/animation.py",
    "galsdk/db.py",
    "galsdk/model.py",
    "galsdk/module.py",
    "galsdk/sniff.py",
    "galsdk/string.py",
    {script = "galsdk/tim.py", target_name = "timdb"},
    {script = "galsdk/vab.py", target_name = "vabdb"},
    "galsdk/xa.py",
    {script = "psx/cd/__main__.py", target_name = "psxcd"},
    "psx/exe.py",
    "psx/tim.py",
    {script = "ash/bd.py", target_name = "ash_bd"},
    {script = "ash/tex.py", target_name = "ash_tex"},
]

[tool.cxfreeze.build_exe]
includes = ["Pmw"]
include_files = ["assets/", "data/", "sdk/", "README.md"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
